<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-118dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="304dp"
        android:text="Register"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="144dp"
        android:layout_height="178dp"
        android:layout_marginStart="133dp"
        android:layout_marginLeft="133dp"
        android:layout_marginEnd="134dp"
        android:layout_marginRight="134dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/img_1" />

    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="356dp"
        android:layout_marginRight="356dp"
        android:text="Nama"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ednama"
        android:layout_width="370dp"
        android:layout_height="41dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/button_shape2"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:hint="@string/rnama"
        android:inputType="textPersonName"
        android:text="Masukan Nama"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nama"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="324dp"
        android:layout_marginRight="324dp"
        android:text="Email"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="370dp"
        android:layout_height="41dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/button_shape2"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="@string/remail"
        android:inputType="textPersonName"
        android:text="Masukan Email"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="496dp"
        android:layout_marginEnd="324dp"
        android:layout_marginRight="324dp"
        android:text="Password"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edpassword"
        android:layout_width="370dp"
        android:layout_height="41dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/button_shape2"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
        android:ems="10"
        android:hint="@string/rpassword"
        android:inputType="textPersonName"
        android:text="Masukan Password"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/repassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="604dp"
        android:layout_marginEnd="304dp"
        android:layout_marginRight="304dp"
        android:text="Re-Password"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRePass"
        android:layout_width="370dp"
        android:layout_height="41dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/button_shape2"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
        android:ems="10"
        android:hint="@string/rrpassword"
        android:inputType="textPersonName"
        android:text="Masukan Password"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repassword"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btSignin"
        android:layout_width="370dp"
        android:layout_height="41dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="#3E497A"
        android:hint="@string/bregister"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRePass"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>